Fixed the paths in storage-environment.yaml

--- a/storage-environment.yaml
+++ b/storage-environment.yaml
@@ -2,10 +2,10 @@
 ## backends. Defaults to Ceph used as a backend for Cinder, Glance and
 ## Nova ephemeral storage.
 resource_registry:
-  OS::TripleO::Services::CephMon: ../puppet/services/ceph-mon.yaml
-  OS::TripleO::Services::CephOSD: ../puppet/services/ceph-osd.yaml
-  OS::TripleO::Services::CephClient: ../puppet/services/ceph-client.yaml
-# OS::TripleO::NodeUserData: ../firstboot/first-boot-template.yaml
+  OS::TripleO::Services::CephMon: /usr/share/openstack-tripleo-heat-templates/puppet/services/ceph-mon.yaml
+  OS::TripleO::Services::CephOSD: /usr/share/openstack-tripleo-heat-templates/puppet/services/ceph-osd.yaml
+  OS::TripleO::Services::CephClient: /usr/share/openstack-tripleo-heat-templates/puppet/services/ceph-client.yaml
+# OS::TripleO::NodeUserData: /usr/share/openstack-tripleo-heat-templates/firstboot/first-boot-template.yaml
 parameter_defaults:
 
   #### BACKEND SELECTION ####
