--- a/network-environment.yaml
+++ b/network-environment.yaml
@@ -3,15 +3,15 @@
 resource_registry:
   # Network Interface templates to use (these files must exist)
   OS::TripleO::BlockStorage::Net::SoftwareConfig:
-    /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans/cinder-storage.yaml
+    ./network/config/single-nic-vlans/cinder-storage.yaml
   OS::TripleO::Compute::Net::SoftwareConfig:
-    /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans/compute.yaml
+    ./network/config/single-nic-vlans/compute.yaml
   OS::TripleO::Controller::Net::SoftwareConfig:
-    /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans/controller.yaml
+    ./network/config/single-nic-vlans/controller.yaml
   OS::TripleO::ObjectStorage::Net::SoftwareConfig:
-    /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans/swift-storage.yaml
+    ./network/config/single-nic-vlans/swift-storage.yaml
   OS::TripleO::CephStorage::Net::SoftwareConfig:
-    /usr/share/openstack-tripleo-heat-templates/network/config/single-nic-vlans/ceph-storage.yaml
+    ./network/config/single-nic-vlans/ceph-storage.yaml
 
 parameter_defaults:
   # This section is where deployment-specific configuration is done
@@ -38,7 +38,7 @@ parameter_defaults:
   StorageMgmtAllocationPools: [{'start': '10.35.140.34', 'end': '10.35.140.60'}]
   TenantAllocationPools: [{'start': '192.168.2.10', 'end': '192.168.2.200'}]
   # Leave room if the external network is also used for floating IPs
-  ExternalAllocationPools: [{'start': '10.35.140.66', 'end': '10.35.140.80'}]
+  ExternalAllocationPools: [{'start': '10.35.140.66', 'end': '10.35.140.75'}]
   # Gateway router for the external network
   ExternalInterfaceDefaultRoute: 10.35.140.94
   # Uncomment if using the Management Network (see network-management.yaml)
