--- a/network/config/single-nic-vlans/ceph-storage.yaml
+++ b/network/config/single-nic-vlans/ceph-storage.yaml
@@ -30,10 +30,6 @@ parameters:
     default: ''
     description: IP address/subnet on the management network
     type: string
-  ExternalNetworkVlanID:
-    default: 10
-    description: Vlan ID for the external network traffic.
-    type: number
   StorageNetworkVlanID:
     default: 30
     description: Vlan ID for the storage network traffic.
@@ -76,7 +72,7 @@ resources:
       config:
         str_replace:
           template:
-            get_file:  /usr/share/openstack-tripleo-heat-templates/network/scripts/run-os-net-config.sh
+            get_file: ../../scripts/run-os-net-config.sh
           params:
             $network_config:
               network_config:
@@ -95,6 +91,9 @@ resources:
                 - ip_netmask: 169.254.169.254/32
                   next_hop:
                     get_param: EC2MetadataIp
+                - default: true
+                  next_hop:
+                    get_param: ControlPlaneDefaultRoute
                 members:
                 - type: interface
                   name: nic1
@@ -106,16 +105,6 @@ resources:
                   addresses:
                   - ip_netmask:
                       get_param: StorageIpSubnet
-                - type: vlan
-                  vlan_id:
-                    get_param: ExternalNetworkVlanID
-                  addresses:
-                  - ip_netmask:
-                      get_param: ExternalIpSubnet
-                  routes:
-                  - default: true
-                    next_hop:
-                      get_param: ExternalInterfaceDefaultRoute
                 - type: vlan
                   vlan_id:
                     get_param: StorageMgmtNetworkVlanID
