--- a/network/config/single-nic-vlans/swift-storage.yaml
+++ b/network/config/single-nic-vlans/swift-storage.yaml
@@ -30,10 +30,6 @@ parameters:
     default: ''
     description: IP address/subnet on the management network
     type: string
-  ExternalNetworkVlanID:
-    default: 10
-    description: Vlan ID for the external network traffic.
-    type: number
   InternalApiNetworkVlanID:
     default: 20
     description: Vlan ID for the internal_api network traffic.
@@ -80,7 +76,7 @@ resources:
       config:
         str_replace:
           template:
-            get_file:  /usr/share/openstack-tripleo-heat-templates/network/scripts/run-os-net-config.sh
+            get_file: ../../scripts/run-os-net-config.sh
           params:
             $network_config:
               network_config:
@@ -99,21 +95,14 @@ resources:
                 - ip_netmask: 169.254.169.254/32
                   next_hop:
                     get_param: EC2MetadataIp
+                - default: true
+                  next_hop:
+                    get_param: ControlPlaneDefaultRoute
                 members:
                 - type: interface
                   name: nic1
                   # force the MAC address of the bridge to this interface
                   primary: true
-                - type: vlan
-                  vlan_id:
-                    get_param: ExternalNetworkVlanID
-                  addresses:
-                  - ip_netmask:
-                      get_param: ExternalIpSubnet
-                  routes:
-                  - default: true
-                    next_hop:
-                      get_param: ExternalInterfaceDefaultRoute
                 - type: vlan
                   vlan_id:
                     get_param: InternalApiNetworkVlanID
