--- a/network/config/single-nic-vlans/osd-compute.yaml
+++ b/network/config/single-nic-vlans/osd-compute.yaml
@@ -38,6 +38,10 @@ parameters:
     default: 30
     description: Vlan ID for the storage network traffic.
     type: number
+  StorageMgmtNetworkVlanID:
+    default: 40
+    description: Vlan ID for the storage network traffic.
+    type: number
   TenantNetworkVlanID:
     default: 50
     description: Vlan ID for the tenant network traffic.
@@ -109,6 +113,12 @@ resources:
                   addresses:
                   - ip_netmask:
                       get_param: InternalApiIpSubnet
+                - type: vlan
+                  vlan_id:
+                    get_param: StorageMgmtNetworkVlanID
+                  addresses:
+                  - ip_netmask:
+                      get_param: StorageMgmtIpSubnet
                 - type: vlan
                   vlan_id:
                     get_param: StorageNetworkVlanID
