Changing the structure of the directories within the repository:  1) Moving all of the basic deployment environment files to its own directory: base-deployment  2) Creating a new directory for dedicated Ceph monitor nodes deployment  3) Adding environment files, data_role.yaml and instackenv.json to the dedicated Ceph monitor node deployment directory  4) Modifying the environment files:    a) Adding another network config file for Ceph monitor nodes    b) Adding the CephMonitor role in role_data.yaml    c) Adding nodes to instackenv.json file    d) adding the pointers to network topology for the Ceph monitor nodes

--- a/base-deployment/network-environment.yaml
+++ b/base-deployment/network-environment.yaml
@@ -3,15 +3,15 @@
 resource_registry:
   # Network Interface templates to use (these files must exist)
   OS::TripleO::BlockStorage::Net::SoftwareConfig:
-    ./network/config/single-nic-vlans/cinder-storage.yaml
+    ../network/config/single-nic-vlans/cinder-storage.yaml
   OS::TripleO::Compute::Net::SoftwareConfig:
-    ./network/config/single-nic-vlans/compute.yaml
+    ../network/config/single-nic-vlans/compute.yaml
   OS::TripleO::Controller::Net::SoftwareConfig:
-    ./network/config/single-nic-vlans/controller.yaml
+    ../network/config/single-nic-vlans/controller.yaml
   OS::TripleO::ObjectStorage::Net::SoftwareConfig:
-    ./network/config/single-nic-vlans/swift-storage.yaml
+    ../network/config/single-nic-vlans/swift-storage.yaml
   OS::TripleO::CephStorage::Net::SoftwareConfig:
-    ./network/config/single-nic-vlans/ceph-storage.yaml
+    ../network/config/single-nic-vlans/ceph-storage.yaml
 
 parameter_defaults:
   # This section is where deployment-specific configuration is done
