--- a/HCI/roles_data.yaml
+++ b/HCI/roles_data.yaml
@@ -203,19 +203,30 @@
     - OS::TripleO::Services::AuditD
     - OS::TripleO::Services::Collectd
 
-- name: CephMonitor
-  HostnameFormatDefault: '%stackname%-cephmonitor-%index%'
-  OvercloudNetworkerFlavor:
+- name: OsdCompute
+  HostnameFormatDefault: '%stackname%-osdcompute-%index%'
   ServicesDefault:
-    - OS::TripleO::Services::CACerts
-    - OS::TripleO::Services::CephMon
+    - OS::TripleO::Services::CephOSD
     - OS::TripleO::Services::Kernel
+    - OS::TripleO::Services::Timezone
+    - OS::TripleO::Services::CACerts
+    - OS::TripleO::Services::CephClient
+    - OS::TripleO::Services::Timezone
     - OS::TripleO::Services::Ntp
     - OS::TripleO::Services::Snmp
     - OS::TripleO::Services::Sshd
-    - OS::TripleO::Services::Timezone
+    - OS::TripleO::Services::NovaCompute
+    - OS::TripleO::Services::NovaLibvirt
+    - OS::TripleO::Services::Kernel
+    - OS::TripleO::Services::ComputeNeutronCorePlugin
+    - OS::TripleO::Services::ComputeNeutronOvsAgent
+    - OS::TripleO::Services::ComputeCeilometerAgent
+    - OS::TripleO::Services::ComputeNeutronL3Agent
+    - OS::TripleO::Services::ComputeNeutronMetadataAgent
     - OS::TripleO::Services::TripleoPackages
     - OS::TripleO::Services::TripleoFirewall
+    - OS::TripleO::Services::NeutronSriovAgent
+    - OS::TripleO::Services::OpenDaylightOvs
     - OS::TripleO::Services::SensuClient
     - OS::TripleO::Services::FluentdClient
     - OS::TripleO::Services::AuditD
