Added   StorageMgmtNetworkVlanID to OsdCompute to the network topology file

--- a/network/config/single-nic-vlans/OsdCompute.yaml
+++ b/network/config/single-nic-vlans/OsdCompute.yaml
@@ -38,6 +38,10 @@ parameters:
     default: 30
     description: Vlan ID for the storage network traffic.
     type: number
+  StorageMgmtNetworkVlanID:
+    default: 40
+    description: Vlan ID for the storage mgmt network traffic.
+    type: number
   TenantNetworkVlanID:
     default: 50
     description: Vlan ID for the tenant network traffic.
