--- a/HCI/roles_data.yaml
+++ b/HCI/roles_data.yaml
@@ -33,6 +33,7 @@
   CountDefault: 1
   ServicesDefault:
     - OS::TripleO::Services::CACerts
+    - OS::TripleO::Services::CephMon
     - OS::TripleO::Services::CephMds
     - OS::TripleO::Services::CephExternal
     - OS::TripleO::Services::CephRbdMirror
