--- a/scale-up-osds/storage-environment-scaleup-osds.yaml
+++ b/scale-up-osds/storage-environment-scaleup-osds.yaml
@@ -1,4 +1,4 @@
-## A Heat environment file which can be used to set up storage
+storage-environment.yaml## A Heat environment file which can be used to set up storage
 ## backends. Defaults to Ceph used as a backend for Cinder, Glance and
 ## Nova ephemeral storage.
 resource_registry:
@@ -24,7 +24,27 @@ parameter_defaults:
   GlanceBackend: rbd
   ## Gnocchi backend can be either 'rbd' (Ceph), 'swift' or 'file'.
   GnocchiBackend: rbd
-
+  CephPools:
+    volumes:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    vms:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    images:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    metrics:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    backups:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
   ExtraConfig:
     ceph::profile::params::osds:
      '/dev/vda':
@@ -50,8 +70,8 @@ parameter_defaults:
 
     ceph::profile::params::osd_max_object_name_len: 256
     ceph::profile::params::osd_max_object_namespace_len: 64
-    ceph::profile::params::osd_pool_default_pg_num: 128
-    ceph::profile::params::osd_pool_default_pgp_num: 128
+    ceph::profile::params::osd_pool_default_pg_num: 256
+    ceph::profile::params::osd_pool_default_pgp_num: 256
     ceph::profile::params::osd_pool_default_size: 3
     ceph::profile::params::osd_pool_default_min_size: 2
     ceph::profile::params::osd_recovery_op_priority: 2
