--- a/scale-up-osds/storage-environment.yaml
+++ b/scale-up-osds/storage-environment.yaml
@@ -1,4 +1,4 @@
-## A Heat environment file which can be used to set up storage
+storage-environment.yaml## A Heat environment file which can be used to set up storage
 ## backends. Defaults to Ceph used as a backend for Cinder, Glance and
 ## Nova ephemeral storage.
 resource_registry:
@@ -24,7 +24,27 @@ parameter_defaults:
   GlanceBackend: rbd
   ## Gnocchi backend can be either 'rbd' (Ceph), 'swift' or 'file'.
   GnocchiBackend: rbd
-
+  CephPools:
+    volumes:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    vms:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    images:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    metrics:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
+    backups:
+      size: 3
+      pg_num: 128
+      pgp_num: 128
   ExtraConfig:
     ceph::profile::params::osds:
      '/dev/vda':
@@ -32,20 +52,6 @@ parameter_defaults:
      '/dev/vdb':
        journal: 
      '/dev/vdc':
-       journal:
-     '/dev/vdd':
-       journal:
-     '/dev/vde':
-       journal:
-     '/dev/vdf':
-       journal:
-     '/dev/vdg':
-       journal:
-     '/dev/vdh':
-       journal:
-     '/dev/vdi':
-       journal:
-     '/dev/vdj':
        journal:
 
     ceph::profile::params::osd_max_object_name_len: 256
